--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
 // html frontend file that can connect to metamask 
 // this web server will be able to interact with all solidity functions
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    Esim-membership
+  </head>
+  <body>
+    Subscribe now
+    <script src= "./index.js" type="text/javascript"></script>
+    </script>
+    <button id="connectButton" onclick="connect()">connect</button>
+    <button id="createMembershipPlanId" onclick="createMembershipPlanId()">createMembershipPlanId</button>
+  </body>
+</html>
+
